# plotski

./: .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  Makefile  README.md  README.rst  mkdocs.yml  pyproject.toml  requirements-docs.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  test_and_deploy.yml
docs/: Makefile  conf.py  history.md  index.md  index.rst  installation.rst  make.bat  usage.rst
misc/: test_and_deploy.yml  test_pull_requests.yml
src/plotski/: __init__.py  _version.py  base.py  enums.py  heatmap.py  image.py  plot.py  rgb.py  scatter.py  spectrum.py  store.py  utilities.py
src/plotski/spectrum/: custom.py  plot.py
src/plotski/store/: __init__.py  containers.py  custom.py
tests/: test_package_metadata.py  test_plotski.py  test_rgb.py  test_store.py
tools/: minreq.py
